kubernetes/webgoat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgoat-service
spec:
  selector:
    app: webgoat
  ports:
    - protocol: TCP
      port: 8080
